@startuml

title __TANKGAME's Class Diagram__\n

  namespace TankGame {
    class TankGame.GameDashboard {
        ~ minimap : Image
        ~ p1w : BufferedImage
        ~ p2w : BufferedImage
        - bgImg : BufferedImage
        - bullets : ArrayList<Projectile>
        - bwalls : ArrayList<BreakableWall>
        - lifeIcon1 : BufferedImage
        - lifeIcon2 : BufferedImage
        - mapHeight : int
        - mapWidth : int
        - minimapHeight : int
        - minimapWidth : int
        - p1WindowBoundX : int
        - p1WindowBoundY : int
        - p2WindowBoundX : int
        - p2WindowBoundY : int
        - pups : ArrayList<PowerUp>
        - walls : ArrayList<Wall>
        - windowHeight : int
        - windowWidth : int
        + GameDashboard()
        + GameDashboard()
        + getBackgroundImage()
        + getGameImage()
        + paintComponent()
        + setBackgroundImage()
        + setLifeIcons()
        + setMapObjects()
        + setProjectiles()
        + setTanks()
        - drawBackground()
        - drawMapLayout()
        - drawPlayerStatus()
        - drawProjectiles()
        - drawTanks()
        - playerViewBoundChecker()
        - setImage()
    }
  }
  

  namespace TankGame {
    class TankGame.GameKeys {
        - downKey : int
        - leftKey : int
        - rightKey : int
        - shootKey : int
        - upKey : int
        + GameKeys()
        + keyPressed()
        + keyReleased()
        + keyTyped()
    }
  }
  

  namespace TankGame {
    class TankGame.GameObservable {
        - caller : Object
        - target : Object
        - type : int
        + getCaller()
        + getTarget()
        + getType()
        + setCollision()
        + setKeys()
        + setType()
        # setChanged()
    }
  }
  

  namespace TankGame {
    class TankGame.GameSounds {
        - clip : Clip
        - soundStream : AudioInputStream
        - type : int
        + GameSounds()
        + getClip()
        + play()
        + stop()
    }
  }
  

  namespace TankGame {
    class TankGame.TankWarGame {
        - NUM_COLS : int
        - NUM_ROWS : int
        - background_path : String
        - breakablewall_path : String
        - bullets : ArrayList<Projectile>
        - bwalls : ArrayList<BreakableWall>
        - frame : JFrame
        - frame_height : int
        - frame_title : String
        - frame_width : int
        - health_path : String
        - img_paths : String[]
        - lifeIcon1_path : String
        - lifeIcon2_path : String
        - life_path : String
        - mapLayout : int[][]
        - map_height : int
        - map_width : int
        - music_path : String
        - projectile_path : String
        - pups : ArrayList<PowerUp>
        - running : boolean
        - sound_paths : String[]
        - soundplayer : ArrayList<GameSounds>
        {static} - tank1 : Tank
        - tank1_path : String
        {static} - tank2 : Tank
        - tank2_path : String
        - thread : Thread
        - wall_path : String
        - walls : ArrayList<Wall>
        + TankWarGame()
        + addBulletToObservable()
        + getBreakableWallSize()
        + getBreakableWalls()
        + getMapHeight()
        + getMapWidth()
        + getPowerUps()
        + getProjectile()
        + getProjectileImg()
        + getSound()
        {static} + getTank()
        + getTankWorld()
        {static} + getTanks()
        + getWallSize()
        + getWalls()
        + getWindowHeight()
        + getWindowWidth()
        {static} + main()
        + playSound()
        + run()
        + setupMap()
        + start()
        + stop()
        - createMapObjects()
        - init()
        - initResourcePaths()
        - initWorldProperties()
        - render()
        - setImage()
        - setMapLayout()
        - setupFrame()
        - setupPlayers()
        - setupSounds()
        - tick()
    }
  }
  

  TankGame.GameDashboard -up-|> javax.swing.JPanel
  TankGame.GameDashboard o-- TankGame.GameObject.Movable.Tank : tank1
  TankGame.GameDashboard o-- TankGame.GameObject.Movable.Tank : tank2
  TankGame.GameKeys .up.|> java.awt.event.KeyListener
  TankGame.GameKeys -up-|> java.util.Observable
  TankGame.GameKeys o-- TankGame.GameObject.Movable.Tank : tank
  TankGame.GameObservable -up-|> java.util.Observable
  TankGame.TankWarGame .up.|> java.lang.Runnable
  TankGame.TankWarGame o-- TankGame.GameDashboard : gameDashboard
  TankGame.TankWarGame o-- TankGame.GameObservable : gobs
  TankGame.TankWarGame o-- TankGame.GameKeys : keyinput1
  TankGame.TankWarGame o-- TankGame.GameKeys : keyinput2
  TankGame.TankWarGame o-- TankGame.GameSounds : music


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
